--- a/style.css
+++ b/style.css
@@ -52,3 +52,26 @@ body {
 .card-text {
   font-size: 12px;
 }
+
+@media (min-width: 768px) and (max-width: 992px) {  
+
+  .col-superviser {
+   position: relative;
+   top: -122px;
+  }
+
+  .col-calculator {
+    position: relative;
+    top: -292px;
+  }
+}
+
+@media (max-width: 768px) {
+  .col-duplicate {
+    padding: 0;
+  }
+
+  .main-row {
+    margin-left: 70px;
+  }
+}
